# xchannuity.app

./: .gitignore  CHANGELOG.md  README.md  Rue.toml  STATUS.md  package.json
.github/workflows/: commitlint.yml
app/: diamond-preview.cjs  gen-assets.cjs  next.config.ts  package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/components/: AnnuityCard.tsx  ConnectButton.tsx  CreatePanel.tsx  Dashboard.tsx  Diamond.tsx  Landing.tsx  Modal.tsx  PoweredByChia.tsx  RecoverCmojo.tsx  SageBadge.tsx  SpendConfirm.tsx  TakeOffer.tsx
app/app/lib/: backup.ts  cmojo.ts  coinset.ts  discovery.ts  flow.ts  format.ts  sage.ts  storage.ts  tokens.ts  walletconnect.tsx  wasm.ts
app/cmojo-pkg/: cmojo_core.d.ts  cmojo_core.js  cmojo_core_bg.wasm  cmojo_core_bg.wasm.d.ts  package.json
app/public/: manifest.webmanifest
core/: Cargo.toml
core/.cargo/: config.toml
core/puzzles/: stream.rue  stream.rue.hash  stream.rue.hex
core/src/: assets.rs  constants.rs  discovery.rs  dto.rs  error.rs  info.rs  lib.rs  spend.rs  wasm.rs
core/src/composition/: discovery.rs  mod.rs  puzzle.rs  spend.rs
core/src/layers/: cat.rs  clawback.rs  mod.rs  owner.rs  stream.rs
core/tests/: adversarial.rs  builders.rs  exploits.rs  layers.rs  redteam.rs  roundtrip.rs
docs/: YAKUHITO_STYLE.md  whitepaper.md
docs/superpowers/plans/: 2026-06-07-driver-layer-composition.md  2026-06-07-xch-via-cmojo.md
docs/superpowers/specs/: 2026-06-07-driver-layer-composition-design.md  2026-06-07-xch-via-cmojo-design.md
